[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creditpulse"
version = "1.0.0"
description = "Advanced Bond Analytics Platform"
readme = "README.md"
authors = [{name = "CreditPulse Team"}]
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "networkx>=3.0",
    "pyvis>=0.3.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "plotly>=5.15.0",
    "altair>=5.0.0",
    "jinja2>=3.1.0",
    "jsonpickle>=3.0.0",
    "ipython>=8.0.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Wodenvase/CreditPulse"
Repository = "https://github.com/Wodenvase/CreditPulse"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt"]
